syntax = "proto3";
package book;

option go_package = "proto/book";

service BookService {
    rpc ReceiveUser(UserData) returns (BookResponse);
    rpc DeleteUser(DeleteData) returns (BookResponse);

    rpc ReceiveAuthor(AuthorData) returns (BookResponse);
    rpc DeleteAuthor(DeleteData) returns (BookResponse);

    rpc ReceiveCategory(CategoryData) returns (BookResponse);
    rpc DeleteCategory(DeleteData) returns (BookResponse);
}

message UserData {
  uint32 id = 1;
  string username = 2;
  string email = 3;
  string role = 4;
  string password = 5;

  string createdAt = 6;
  string updatedAt = 7;
  string deletedAt = 8;
}

message DeleteData {
  uint32 id = 1;
}

message AuthorData {
  uint32 id = 1;
  string name = 2;
  string bio = 3;

  uint32 createdById = 4;
  uint32 updatedById = 5;

  string createdAt = 6;
  string updatedAt = 7;
  string deletedAt = 8;
}

message CategoryData {
  uint32 id = 1;
  string name = 2;
  
  uint32 createdById = 3;
  uint32 updatedById = 4;

  string createdAt = 5;
  string updatedAt = 6;
  string deletedAt = 7;
}

message BookResponse {
  bool success = 1;
  string message = 2;
}